Fixed an issue with the z-index where the modal would cover up alerts
Former-commit-id: 362d7f7fa95b08cf2d7a7a14ceed505a67853190

--- a/theme/modules/feedback/_modal.scss
+++ b/theme/modules/feedback/_modal.scss
@@ -4,7 +4,7 @@
 	left: 50%;
 	max-height: 70vh;
 	max-width: 90vw;
-	z-index: 9999995;
+	z-index: 99995;
 	min-height: 100px;
 	min-width: 400px;
 	border: $borderHeavy;
